[tool.poetry]
name = "ai-server"
version = "0.1.0"
description = ""
authors = ["JayanthVeerappa <jayanth.vinaveera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
streamlit = "^1.41.1"
openai = "^1.59.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
